updated overflow issue

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1{
 #quantity1, #quantity2, #operation{
     margin: 20px 0px;
     height: 40px;
+    font-size: 18px;
 }
 #quantity1, #quantity2{
     width: 150px;
@@ -34,13 +35,17 @@ button{
     background-color:rgb(129, 162, 224);
     border: 1px solid black;
     border-radius: 5px;
-    
+}
+
+button:hover{
+    opacity: 70%;
 }
 
 .navigation-bar{
     margin-bottom: 30px;
     font-size: 36px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 #main-content{
@@ -60,6 +65,9 @@ button{
     border-radius: 15px;
 }
 
+#calculator-container, #pascal-triangle-container{
+    overflow: auto;
+}
 .footer{
     position: fixed;
     left: 0px;
@@ -83,7 +91,7 @@ button{
     text-align: center;
     border-radius: 15px;
     margin: 20px 0px;
-    overflow: scroll;
+    
 
 }
 
@@ -95,6 +103,10 @@ button{
 
 #test{
     height: 100px;
+}
+
+#tri-test, #test{
+    overflow: auto;
 }
 
 #tri-test{
